@@ -231,9 +231,14 @@ start_forwarding () {
 }
 
 start_ovs_ipsec () {
+    if test X$RESTART_IKE_DAEMON = Xno; then
+        no_restart="--no-restart-ike-daemon"
+    fi
+
     ${datadir}/scripts/ovs-monitor-ipsec \
         --pidfile=${rundir}/ovs-monitor-ipsec.pid \
         --ike-daemon=$IKE_DAEMON \
+        $no_restart \
         --log-file --detach --monitor unix:${rundir}/db.sock || return 1
     return 0
 }
@@ -341,6 +346,7 @@ set_defaults () {
     SPORT=
 
     IKE_DAEMON=
+    RESTART_IKE_DAEMON=yes
 
     type_file=$etcdir/system-type.conf
     version_file=$etcdir/system-version.conf
@@ -424,6 +430,8 @@ Options for "enable-protocol":
 Option for "start-ovs-ipsec":
   --ike-daemon=IKE_DAEMON
       the IKE daemon for ipsec tunnels (either libreswan or strongswan)
+  --no-restart-ike-daemon
+      do not restart the IKE daemon on startup
 
 Other options:
   -h, --help                  display this help message
